syntax = "proto3";
package Noise.RemoteServer.Protocol;

message SearchItemInfo {
	int64		TrackId = 1;
	int64		ArtistId = 2;
	int64		AlbumId = 3;
	string		ArtistName = 4;
	string		AlbumName = 5;
	string		VolumeName = 6;
	string		TrackName = 7;
	int32		TrackNumber = 8;
	int32		Duration = 9;
	int32		Rating = 10;
	bool		IsFavorite = 11;
}

message SearchRequest {
	string		SearchTerm = 1;
}

message SearchResponse {
	bool	Success = 1;
	string	ErrorMessage = 2;
	repeated SearchItemInfo	SearchResults = 3;
}

service SearchInformation {
	rpc Search (SearchRequest) returns (SearchResponse);
}
